# NickelStorygraph

./: .clangd  .gitignore  LICENSE  README.md  justfile
.forgejo/nickeltc/: Dockerfile  action.yml
.forgejo/workflows/: build.yml
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: config.rs  isbn.rs  main.rs  storygraph.rs  utils.rs
cli/src/commands/: getfeed.rs  getgoals.rs  getstreak.rs  getuser.rs  getuserbook.rs  insertjournal.rs  listbookmarks.rs  listeditions.rs  listjournal.rs  listreading.rs  mod.rs  search.rs  setuserbook.rs  switchedition.rs  syncedition.rs  update.rs  updatejournal.rs
hook/: Makefile
hook/res/: config_example.ini  nickelstoregraph.qrc
hook/src/: cli.cc  cli.h  files.h  menucontroller.cc  menucontroller.h  nickelstoregraph.cc  nickelstoregraph.h  settings.cc  settings.h  synccontroller.cc  synccontroller.h  syncqueue.cc  syncqueue.h
hook/src/annotations/: annotationsdialog.cc  annotationsdialog.h  annotationsrow.cc  annotationsrow.h
hook/src/editions/: editionrow.cc  editionrow.h  editionsdialog.cc  editionsdialog.h
hook/src/feed/: feeddialog.cc  feeddialog.h  feedrow.cc  feedrow.h
hook/src/goals/: goalsdialog.cc  goalsdialog.h  goalsrow.cc  goalsrow.h  streaksummary.cc  streaksummary.h
hook/src/insertjournal/: insertjournaldialog.cc  insertjournaldialog.h
hook/src/journal/: journaldialog.cc  journaldialog.h  journalentry.cc  journalentry.h
hook/src/reading/: readingdialog.cc  readingdialog.h  readingrow.cc  readingrow.h
hook/src/review/: reviewdialog.cc  reviewdialog.h
hook/src/search/: bookrow.cc  bookrow.h  (+2 more)
(+22 files in other folders)
